# Engineering

CmakeTest/: CMakeCache.txt  CMakeLists.txt  Makefile  ap.c  ap.h  asdf.c  asdf.h  cmake_install.cmake  main.c
Diplom/: OFDM.py  Signal.py  (+2 more)
MCU/WCH/: .clangd  CMakeLists.txt  flake.nix  flakealkdjkjk.nix  justfile
MCU/WCH/.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
MCU/WCH/.direnv/flake-inputs/: i3zd6xnrwk15wvgs7yq4s0x3c2v6gck8-source  lxk10hc644kslg0xqmsqfh9f1wbx5qwy-source  m4y166hyrj4nkh9x6w7nf3hgai9jz7z4-source  qcfd2r6yldg07b1fqsf38ak2ghman472-source  qdpngwc9f0rr4ph265nwwz4hmfq8xjz9-source  zvr8hrh23hig1qbvvd3dh48dd43lwv0v-source
MCU/WCH/CH32V20x/: CMakeLists.txt  flake.nix  wch.py  wdf.py
MCU/WCH/CH32V20x/.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
MCU/WCH/CH32V20x/.direnv/flake-inputs/: b95gcbc6zkdi5gg4qgjvxkvh566x18sl-source  qgidjbk9i8y4b5gh88amghgzqik2mygq-source  s7f57rzmx90gsk99lif1nvw21ad744jw-source  sz4l32g8j2n6rbylxwswahd70bfzfz3j-source
MCU/WCH/CH32V20x/Project/blink/: CMakeLists.txt  main.c
MCU/WCH/CH32V20x/Project/blink/.cache/clangd/index/: main.c.52722A68E4C538D9.idx
MCU/WCH/CH32V20x/Project/sdf/: main.c
MCU/WCH/CH32V20x/Src/: Link.ld  Linkbak.ld  libc.c
MCU/WCH/CH32V30x/: CMakeLists.txt  flake.nix  wch.py  wdf.py
MCU/WCH/CH32V30x/.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
MCU/WCH/CH32V30x/.direnv/flake-inputs/: 4p6idwqsr383mamn3a9f72q5v20bzwh5-source  59krrz65jk9qy438k2k7qxrsjxankf42-source  9aq5k73c1mbqvclx7919321zbgiimpzf-source  jx06pbaf1z4pl253pf8z3lhn75qjkgf8-source  z4yn1dgydagij7lf5sg3m5izfb40531p-source
MCU/WCH/CH32V30x/Project/Blink30/: .clangd  CMakeLists.txt  main.c
MCU/WCH/CH32V30x/Project/Blink30/.cache/clangd/index/: main.c.D02577F91B24C12A.idx
MCU/WCH/CH32V30x/Project/Programmator/: CMakeLists.txt  main.c  oled.c  oled.h  src.cmake
MCU/WCH/CH32V30x/Project/Programmator/.cache/clangd/index/: main.c.A59FBF20BA912B5B.idx
MCU/WCH/CH32V30x/Project/Programmator/__cmake_systeminformation/: CMakeCache.txt
MCU/WCH/CH32V30x/Project/Programmator/ssd1306/: i2c_tx.c  i2c_tx.h  oled_segment.c  oled_segment.h
MCU/WCH/CH32V30x/Project/sdf/: src.cmake
MCU/WCH/CH32V30x/__cmake_systeminformation/: CMakeCache.txt
MCU/WCH/Project/Blink30/: .clangd  CMakeLists.txt  main.c
MCU/WCH/Project/Blink30/.cache/clangd/index/: main.c.D02577F91B24C12A.idx
MCU/WCH/Project/blink/: CMakeLists.txt  main.c
MCU/WCH/firmware/ch32v203/: linkder.ld  main.c
MCU/WCH/toolchain/: sub_manifest.json
MCU/WCH/toolchain/RISC-V Embedded GCC15/libexec/gcc/riscv32-wch-elf/15.2.0/: liblto_plugin.la
MCU/WCH/toolchain/RISC-V Embedded GCC15/riscv32-wch-elf/lib/ldscripts/: elf32briscv.xce  elf32briscv.xn  elf32lriscv.xn  elf32lriscv.xw  elf64briscv.x  elf64lriscv.xbn  elf64lriscv.xer  elf64lriscv.xwer
MCU/WCH/toolchain/RISC-V Embedded GCC15/riscv32-wch-elf/lib/rv32e/ilp32e/: libstdc++.a-gdb.py  libsupc++.la
MCU/WCH/toolchain/RISC-V Embedded GCC15/riscv32-wch-elf/lib/rv32ec_xw/ilp32e/: libstdc++.la
MCU/WCH/toolchain/RISC-V Embedded GCC15/riscv32-wch-elf/lib/rv32ec_zmmul_xw/ilp32e/: libstdc++.la  libsupc++.la
MCU/WCH/toolchain/RISC-V Embedded GCC15/riscv32-wch-elf/lib/rv32imac_zaamo_zalrsc/ilp32/: libstdc++.a-gdb.py  libstdc++.la
MCU/WCH/toolchain/RISC-V Embedded GCC15/riscv32-wch-elf/lib/rv32imac_zaamo_zalrsc_zba_zbb_zbc_zbs_xw/ilp32/: libstdc++.a-gdb.py  libstdc++exp.la
MCU/WCH/toolchain/RISC-V Embedded GCC15/riscv32-wch-elf/lib/rv32imac_zaamo_zalrsc_zba_zbb_zbc_zbs_zvbb_zve32x_zve64x_zvkb_zvl32b_zvl64b/ilp32/: libstdc++.a-gdb.py  libstdc++exp.la
MCU/WCH/toolchain/RISC-V Embedded GCC15/riscv32-wch-elf/lib/rv32imac_zaamo_zalrsc_zve32x_zve64x_zvl32b_zvl64b_xw/ilp32/: libstdc++.a-gdb.py  libstdc++exp.la
MCU/WCH/toolchain/RISC-V Embedded GCC15/riscv32-wch-elf/lib/rv32imafc_zaamo_zalrsc/ilp32f/: libstdc++.a-gdb.py  libstdc++exp.la  libsupc++.la
MCU/WCH/toolchain/RISC-V Embedded GCC15/share/info/: bfd.info  gdb.info
MCU/WCH/toolchain/RISC-V Embedded GCC15/share/man/man1/: riscv32-wch-elf-gdb.1  riscv32-wch-elf-gstack.1  riscv32-wch-elf-ld.1  riscv32-wch-elf-strings.1  riscv32-wch-elf-strip.1
MCU/WCH/toolchain/RISC-V Embedded GCC15/share/man/man7/: gpl.7
MCU/WCH/toolchain/riscv32/riscv32-wch-elf/lib/ldscripts/: elf32briscv.x  elf32briscv.xbn  elf32briscv.xc  elf32briscv.xe  elf32briscv.xwer  elf32lriscv.xbn  elf32lriscv.xce  elf32lriscv.xcer  elf32lriscv.xwe  elf64briscv.xcer  elf64briscv.xn  elf64briscv.xwe  elf64lriscv.xce  elf64lriscv.xw
MCU/WCH/toolchain/riscv32/share/info/: stabs.info
MCU/WCH/toolchain/riscv32/share/man/man1/: riscv32-wch-elf-addr2line.1  riscv32-wch-elf-as.1  riscv32-wch-elf-dlltool.1  riscv32-wch-elf-gcov-dump.1  riscv32-wch-elf-gprof.1  riscv32-wch-elf-lto-dump.1  riscv32-wch-elf-ranlib.1
MCU/WCH/toolchain/riscv32/share/man/man7/: gfdl.7
MCU/WCH_1/CH32V20x/: CMakeLists.txt  flake.nix
MCU/WCH_1/CH32V20x/.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
MCU/WCH_1/CH32V20x/.direnv/flake-inputs/: f7j4zw7jy8fvmj4l45m9s6ikprdi1j24-source  w7n3w2ninw43v1xv885409l2ff1dxi8s-source
MCU/WCH_1/CH32V20x/Project/TEest/: main.c
MCU/WCH_1/CH32V20x/Project/blink/: CMakeLists.txt.bak
MCU/WCH_1/CH32V20x/Project/sdf/: main.c
MCU/WCH_1/CH32V20x/Src/: syscalls.c
MCU/WCH_1/CH32V30x/: CMakeLists.txt  flake.bak.nix  flake.nix  wch.py
MCU/WCH_1/CH32V30x/.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
MCU/WCH_1/CH32V30x/.direnv/flake-inputs/: gf9wwjcl57b9qynpdjip50dq03xfff92-source  ifvlyjn8i45haxdzindclwag7sc3bdnq-source  xnf40znzpfxqgyc6npl2g21ivhjbl50f-source
MCU/WCH_1/CH32V30x/Project/Programmator/: main.c  main.nak.c
MCU/WCH_1/CH32V30x/Project/Programmator/ssd1306/: i2c_tx.c
MCU/WCH_1/CH32V30x/Project/sdf/: main.c
(+4086 files in other folders)
